# AudioLdoce

./: README.md  pyproject.toml
src/audio_ldoce/: __init__.py  ldoce_client.py  run.py  run.sh
