[project]
name = "audio-ldoce"
version = "0.1.0"
description = ""
authors = [
    {name = "manhdt",email = "thitkhotau.no1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "audio_ldoce", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
